# doggo-display

./: Cargo.toml  LICENSE  README.md  config.toml  setup.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  display.rs  main.rs  platform.rs
systemd/: doggo-display.service
