[package]
name = "doggo-display"
version = "0.1.0"
edition = "2024"

[dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
gpio-cdev = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"